# dspy-mini-reproduction

./: README.md  bug-report.md  main.py  pyproject.toml
.github/workflows/: run-main.yml
