[project]
name = "dspy-mini-reproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dspy>=3.0.4",
    "httpx[socks]>=0.28.1",
    "mlflow>=3.7.0",
]


[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
